--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <ul class="navigation">
                     <li><a href="#top"><i class="fa fa-globe"></i>首页</a></li>
                     <li><a href="#about"><i class="fa fa-pencil"></i>个人简介</a></li>
-                    <li><a href="#projects"><i class="fa fa-paperclip"></i>绘画</a></li>
-                    <li><a href="#projects2"><i class="fa fa-paperclip"></i>文章</a></li>
+                    <li><a href="#projects"><i class="fa fa-paperclip"></i>个人画展</a></li>
+                    <li><a href="#projects2"><i class="fa fa-paperclip"></i>随笔</a></li>
                     <li><a href="#contact"><i class="fa fa-link"></i>留言板</a></li>
                 </ul>
             </div> <!-- .main-navigation -->
@@ -83,7 +83,8 @@
                         <div class="col-md-12">
                             <h4 class="widget-title">个人简介</h4>
                             <div class="about-image">
-                                <img src="img/8.jpg" alt="about me">
+                                <a href="intruduce.html">
+<img src="img/8.jpg" alt="about me">
                             </div>
                             <p>
                                 倔强，漫不经心。
@@ -106,10 +107,10 @@
                     <div class="row projects-holder">
                         <div class="col-md-4 col-sm-6">
                             <div class="project-item">
-                                <img src="img/1.jpg" alt="">
+                                <a href="drawing.html"><img src="img/1.jpg" alt="">
                                 <div class="project-down">
                                     <div class="outside">
-                                        <h5><a href="#">作品一</a></h5>
+                                        <h5><a href="drawing.html">作品一</a></h5>
                                         <p>人物</p>
                                     </div>
                                 </div>
@@ -117,9 +118,9 @@
                         </div>
                         <div class="col-md-4 col-sm-6">
                             <div class="project-item">
-                                <img src="img/2.jpg" alt="">
-                                <div class="project-hover">
-                                    <div class="inside">
+                                <a href="drawing.html"><img src="img/2.jpg" alt="">
+                                 <div class="project-down">
+                                    <div class="outside">
                                         <h5><a href="#">作品二</a></h5>
                                         <p>人物</p>
                                     </div>
@@ -128,9 +129,9 @@
                         </div>
                         <div class="col-md-4 col-sm-6">
                             <div class="project-item">
-                                <img src="img/3.jpg" alt="">
-                                <div class="project-hover">
-                                    <div class="inside">
+                                <a href="drawing.html"><img src="img/3.jpg" alt="">
+                                 <div class="project-down">
+                                    <div class="outside">
                                         <h5><a href="#">作品三</a></h5>
                                         <p>人物</p>
                                     </div>
@@ -139,9 +140,9 @@
                         </div>
                         <div class="col-md-4 col-sm-6">
                             <div class="project-item">
-                                <img src="img/4.jpg" alt="">
-                                <div class="project-hover">
-                                    <div class="inside">
+                                <a href="drawing.html"><img src="img/4.jpg" alt="">
+                                 <div class="project-down">
+                                    <div class="outside">
                                         <h5><a href="#">作品四</a></h5>
                                         <p>人物</p>
                                     </div>
@@ -150,9 +151,9 @@
                         </div>
                         <div class="col-md-4 col-sm-6">
                             <div class="project-item">
-                                <img src="img/5.jpg" alt="">
-                                <div class="project-hover">
-                                    <div class="inside">
+                                <a href="drawing.html"><img src="img/5.jpg" alt="">
+                                 <div class="project-down">
+                                    <div class="outside">
                                         <h5><a href="#">作品五</a></h5>
                                         <p>人物</p>
                                     </div>
@@ -161,9 +162,9 @@
                         </div>
                         <div class="col-md-4 col-sm-6">
                             <div class="project-item">
-                                <img src="img/6.jpg" alt="">
-                                <div class="project-hover">
-                                    <div class="inside">
+                                <a href="drawing.html"><img src="img/6.jpg" alt="">
+                                 <div class="project-down">
+                                    <div class="outside">
                                         <h5><a href="#">作品六</a></h5>
                                         <p>人物</p>
                                     </div>
@@ -186,16 +187,16 @@
  
 <div class="blank"></div>
 <div class="blog">
-  <figure> <a href="/"><img src="img/t01.jpg"></a>
-    <p><a href="/">愿有人陪你一起颠沛流离</a></p>
+  <figure> <a href="log.html"><img src="img/t01.jpg"></a>
+    <p><a href="log.html">愿有人陪你一起颠沛流离</a></p>
     <figcaption>有一天晚上我收到朋友的邮件，他问我怎样可以最快地摆脱寂寞，我想了想不知道应该怎么回答他，因为我从来没有摆脱过这个问题，我只能去习惯它，就像习惯身体的一部分。</figcaption>
   </figure>
-  <figure> <a href="/"><img src="img/t02.jpg"></a>
-    <p><a href="/">你要去相信，没有到不了的明天</a></p>
+  <figure> <a href="log.html"><img src="img/t02.jpg"></a>
+    <p><a href="log.html">你要去相信，没有到不了的明天</a></p>
     <figcaption>不管你现在是一个人走在异乡的街道上始终没有找到一丝归属感，还是你在跟朋友们一起吃饭开心地笑着的时候闪过一丝落寞。</figcaption>
   </figure>
-  <figure> <a href="/"><img src="img/t03.jpg"></a>
-    <p><a href="/">美丽的茧</a></p>
+  <figure> <a href="log.html"><img src="img/t03.jpg"></a>
+    <p><a href="log.html">美丽的茧</a></p>
     <figcaption>让世界拥有它的脚步，让我保有我的茧。当溃烂已极的心灵再不想做一丝一毫的思索时，就让我静静回到我的茧内，以回忆为睡榻，以悲哀为覆被，这是我唯一的美丽。</figcaption>
   </figure>
 </div>
